# documind-pdf-rag

./: .gitignore  README.md  docker-compose.yml
client/: FRONTEND_PROGRESS.md  middleware.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/components/: chat.tsx  document-workspace.tsx  documind-landing.tsx  file-upload.tsx  header.tsx  pdf-viewer.tsx  sidebar.tsx
client/components/ui/: theme-toggle.tsx  toast-provider.tsx
server-python/: .env  README.md  main.py  pyproject.toml
server-python/app/: __init__.py  config.py  main.py  models.py
server-python/app/services/: __init__.py  document_processor.py  embeddings.py  llm.py  vector_store.py
server-python/scripts/: start_server.py  start_worker.py
server-python/workers/: __init__.py  celery_app.py  document_tasks.py
