[project]
name = "documind-server"
version = "0.1.0"
description = "DOCUMIND PDF RAG Server - Python Backend"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    
    # Vector Database & AI
    "qdrant-client>=1.6.9",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-qdrant>=0.1.0",
    "nomic>=1.1.14",
    "openai>=1.3.8",
    
    # Background Jobs
    "celery[redis]>=5.3.4",
    "redis>=5.0.1",
    
    # PDF Processing
    "pypdf2>=3.0.1",
    
    # Data & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # HTTP Client
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "workers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ['py312']